[imap] Fix: use uid as sequence number to avoid heavy numbering with changeset